--- a/notebooks/Sentiment Word Cloud by Cuisine.ipynb
+++ b/notebooks/Sentiment Word Cloud by Cuisine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "61492dd5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "41ef53cf",
    "metadata": {},
    "outputs": [
@@ -62,10 +62,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x204db8aca60>"
+       "<pyspark.sql.session.SparkSession at 0x13eeeef5e20>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "e01747a2",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "78ddeec0",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of Raw Reviews =  19567851\n"
+      "Total Number of Reviews =  19567851\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "9c4f896d",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 6,
    "id": "d66851ff",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 7,
    "id": "b321922e",
    "metadata": {},
    "outputs": [],
@@ -203,13 +203,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 17,
    "id": "225cff15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[place_id: string, rest_type: string, rating: bigint, words_clean: array<string>]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_clean_reviews = spark_prep(df_rest_attrs, df_reviews)\n",
     "df_clean_reviews.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "09d49089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+------------+\n",
+      "|     rest_type|rest_count|review_count|\n",
+      "+--------------+----------+------------+\n",
+      "|      american|     10520|     1761792|\n",
+      "|       mexican|      6459|      820290|\n",
+      "|           bar|      6383|      943499|\n",
+      "|     fast food|      5497|      728738|\n",
+      "|   cafe&bakery|      5220|      582950|\n",
+      "|       chinese|      5097|      433234|\n",
+      "|        burger|      4683|      452083|\n",
+      "|         pizza|      3959|      500513|\n",
+      "|       italian|      2487|      446251|\n",
+      "|latin american|      2258|      301505|\n",
+      "| mediterranean|      2251|      292757|\n",
+      "|      japanese|      1854|      241367|\n",
+      "|       seafood|      1655|      285175|\n",
+      "|          thai|      1360|      167712|\n",
+      "|        indian|      1032|      154374|\n",
+      "+--------------+----------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_rest_count = df_clean_reviews.groupBy(\"rest_type\").agg(F.countDistinct(\"place_id\")).withColumnRenamed('count(place_id)', 'rest_count')\n",
+    "df_rev_count = df_clean_reviews.groupBy(\"rest_type\").count().withColumnRenamed('count', 'review_count')\n",
+    "df_rest_count.join(df_rev_count, 'rest_type').sort(F.col('rest_count').desc()).show()"
    ]
   },
   {
